# federated-learning-tutorial

./: README.md  environment.yml  example_pathmnist_centralised.py  main_fl.py  pyproject.toml
fl_demo/: FLClient.py  cnn_pathmnist.py  dataset_utils.py  debug_utils.py  dp_utils.py  eval_utils.py  fl_utils.py  main.py  train_pathmnist.py  train_utils.py
